// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conditionallyCreateOrUpdateSchemaRecordings if a given schemaMapping.targetSchemaId !== 'NEW' if the given schemaMapping.opsRecordingsSchemaHash does not match the hash associated with the given schemaMapping.targetSchemaId testing particular schema changes if a type\`s field is changed to target a different type should detect FIELD_CHANGED_KIND 1`] = `
Array [
  Object {
    "description": "Query.anotherThing changed type from AnotherThing to YetAnotherThing.",
    "type": "FIELD_CHANGED_KIND",
  },
]
`;

exports[`conditionallyCreateOrUpdateSchemaRecordings if a given schemaMapping.targetSchemaId !== 'NEW' if the given schemaMapping.opsRecordingsSchemaHash matches the hash associated with the given schemaMapping.targetSchemaId should resolve the expected data 1`] = `
Array [
  Object {
    "schemaHash": "booBopImASchemaHaSh",
    "schemaId": "someSchemaId",
  },
]
`;

exports[`conditionallyCreateOrUpdateSchemaRecordings if a given schemaMapping.targetSchemaId === 'NEW' if schemaMapping.schemaName === null should throw 1`] = `"\\"input.schemaMappings.schemaName\\" is required for new schema creation."`;
